// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountProgressBar should match a snapshot for 0 complete 1`] = `
<AccountProgressBar
  percentageComplete={0}
  setPercentageComplete={[MockFunction]}
>
  <Section>
    <section
      className="section has-padding has-margin has-background"
      data-test=""
    >
      <ProgressBar
        width={0}
      >
        <div
          className="progress-bar"
          style={
            Object {
              "--p1qkupc0-0": "0%",
            }
          }
          width={0}
        >
          0
          %
        </div>
      </ProgressBar>
      <ProgressMessage
        percentageComplete={0}
      >
        <ProgressMessageText
          key="1"
        >
          <div
            className="progress-message-text"
          >
            Initializing...
          </div>
        </ProgressMessageText>
      </ProgressMessage>
    </section>
  </Section>
</AccountProgressBar>
`;

exports[`AccountProgressBar should match a snapshot for 19 complete 1`] = `
<AccountProgressBar
  percentageComplete={19}
  setPercentageComplete={[MockFunction]}
>
  <Section>
    <section
      className="section has-padding has-margin has-background"
      data-test=""
    >
      <ProgressBar
        width={19}
      >
        <div
          className="progress-bar"
          style={
            Object {
              "--p1qkupc0-0": "19%",
            }
          }
          width={19}
        >
          19
          %
        </div>
      </ProgressBar>
      <ProgressMessage
        percentageComplete={19}
      >
        <ProgressMessageText
          key="1"
        >
          <div
            className="progress-message-text"
          >
            Initializing...
          </div>
        </ProgressMessageText>
      </ProgressMessage>
    </section>
  </Section>
</AccountProgressBar>
`;

exports[`AccountProgressBar should match a snapshot for 39 complete 1`] = `
<AccountProgressBar
  percentageComplete={39}
  setPercentageComplete={[MockFunction]}
>
  <Section>
    <section
      className="section has-padding has-margin has-background"
      data-test=""
    >
      <ProgressBar
        width={39}
      >
        <div
          className="progress-bar"
          style={
            Object {
              "--p1qkupc0-0": "39%",
            }
          }
          width={39}
        >
          39
          %
        </div>
      </ProgressBar>
      <ProgressMessage
        percentageComplete={39}
      >
        <ProgressMessageText
          key="2"
        >
          <div
            className="progress-message-text"
          >
            Creating account...
          </div>
        </ProgressMessageText>
      </ProgressMessage>
    </section>
  </Section>
</AccountProgressBar>
`;

exports[`AccountProgressBar should match a snapshot for 59 complete 1`] = `
<AccountProgressBar
  percentageComplete={59}
  setPercentageComplete={[MockFunction]}
>
  <Section>
    <section
      className="section has-padding has-margin has-background"
      data-test=""
    >
      <ProgressBar
        width={59}
      >
        <div
          className="progress-bar"
          style={
            Object {
              "--p1qkupc0-0": "59%",
            }
          }
          width={59}
        >
          59
          %
        </div>
      </ProgressBar>
      <ProgressMessage
        percentageComplete={59}
      >
        <ProgressMessageText
          key="3"
        >
          <div
            className="progress-message-text"
          >
            Provisioning compute...
          </div>
        </ProgressMessageText>
      </ProgressMessage>
    </section>
  </Section>
</AccountProgressBar>
`;

exports[`AccountProgressBar should match a snapshot for 79 complete 1`] = `
<AccountProgressBar
  percentageComplete={79}
  setPercentageComplete={[MockFunction]}
>
  <Section>
    <section
      className="section has-padding has-margin has-background"
      data-test=""
    >
      <ProgressBar
        width={79}
      >
        <div
          className="progress-bar"
          style={
            Object {
              "--p1qkupc0-0": "79%",
            }
          }
          width={79}
        >
          79
          %
        </div>
      </ProgressBar>
      <ProgressMessage
        percentageComplete={79}
      >
        <ProgressMessageText
          key="4"
        >
          <div
            className="progress-message-text"
          >
            Preparing permissions...
          </div>
        </ProgressMessageText>
      </ProgressMessage>
    </section>
  </Section>
</AccountProgressBar>
`;

exports[`AccountProgressBar should match a snapshot for 94 complete 1`] = `
<AccountProgressBar
  percentageComplete={94}
  setPercentageComplete={[MockFunction]}
>
  <Section>
    <section
      className="section has-padding has-margin has-background"
      data-test=""
    >
      <ProgressBar
        width={94}
      >
        <div
          className="progress-bar"
          style={
            Object {
              "--p1qkupc0-0": "94%",
            }
          }
          width={94}
        >
          94
          %
        </div>
      </ProgressBar>
      <ProgressMessage
        percentageComplete={94}
      >
        <ProgressMessageText
          key="5"
        >
          <div
            className="progress-message-text"
          >
            Setting up defaults...
          </div>
        </ProgressMessageText>
      </ProgressMessage>
    </section>
  </Section>
</AccountProgressBar>
`;

exports[`AccountProgressBar should match a snapshot for 99 complete 1`] = `
<AccountProgressBar
  percentageComplete={99}
  setPercentageComplete={[MockFunction]}
>
  <Section>
    <section
      className="section has-padding has-margin has-background"
      data-test=""
    >
      <ProgressBar
        width={99}
      >
        <div
          className="progress-bar"
          style={
            Object {
              "--p1qkupc0-0": "99%",
            }
          }
          width={99}
        >
          99
          %
        </div>
      </ProgressBar>
      <ProgressMessage
        percentageComplete={99}
      >
        <ProgressMessageText
          key="6"
        >
          <div
            className="progress-message-text"
          >
            Nearly there, final checks... please note, on the first user account provision, this can take a few minutes...
          </div>
        </ProgressMessageText>
      </ProgressMessage>
    </section>
  </Section>
</AccountProgressBar>
`;

exports[`AccountProgressBar should match a snapshot for 100 complete 1`] = `
<AccountProgressBar
  percentageComplete={100}
  setPercentageComplete={[MockFunction]}
>
  <Section>
    <section
      className="section has-padding has-margin has-background"
      data-test=""
    >
      <ProgressBar
        width={100}
      >
        <div
          className="progress-bar"
          style={
            Object {
              "--p1qkupc0-0": "100%",
            }
          }
          width={100}
        >
          100
          %
        </div>
      </ProgressBar>
      <ProgressMessage
        percentageComplete={100}
      >
        <ProgressMessageText
          key="7"
        >
          <div
            className="progress-message-text"
          >
            Your account is ready! 
            <span
              role="img"
            >
              🚀
            </span>
          </div>
        </ProgressMessageText>
      </ProgressMessage>
    </section>
  </Section>
</AccountProgressBar>
`;
